<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.help</groupId>
  <artifactId>java-memo</artifactId>
  <version>0.0.1</version>
  
  <scm>
		<connection>scm:git:git@github.com:bubal/java-memo.git</connection>
		<url>scm:git:git@github.com:bubal/java-memo.git</url>
		<developerConnection>scm:git:git@github.com:bubal/java-memo.git</developerConnection>
	</scm>
	
	<dependencies>
	<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
	</dependency>
	</dependencies>
	
	
	<build>
		<finalName>tennis</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.9.5</version>
				<configuration>
					<connectionType>developerConnection</connectionType>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
  
  
</project>